# tinychat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  chat.proto  websocket_client.cpp
client-webui/client/: package.json  webpack.config.js
client-webui/client/src/: browser-client.js  chat.js  index.js
client-webui/invreg/: auth_funcs.js  package.json  redis_client.js  server.config.js  server.js  string_verify.js
client-webui/invreg/static/: index.html  success.html  users.html
include/utility/: async_stdio.hpp  boost_system_exception.hpp  lazy_timeout.hpp  worded_exception.hpp
include/utility/impl/: logging.ipp
protocol/: chat.proto
server/: CMakeLists.txt  chat.proto  websocket_server.cpp
server/include/: chatroom.hpp  logging.hpp
server/include/db/: bredis.hpp  bredis_client.hpp  dummy_client.hpp  redis.md  via_bredis.hpp
server/include/db/via_bredis/: bredis_client.hpp  log_storage.hpp  subscriptor.hpp  user_manage.hpp
server/include/db/via_bredis/impl/: log_storage.ipp  subscriptor.ipp  user_manage.ipp
server/include/impl/: logging.ipp
test/: CMakeLists.txt  test_msg_deliver.cpp
utility/: async_stdio.hpp  boost_system_exception.hpp  lazy_timeout.hpp  optional_ssl_stream.hpp
